# explored_zone

./: .gitignore  .gitmodules  README.md  gmon.out  readme.org
data/bags/: bag_2021-10-04-17-29-42.bag
data/extracted/bag_2021-10-07-11-09-50/: gps.npz  heading.npz  imu.npz  imu_orient.txt  mag_flag.npz  pos.txt
data/extracted/bag_2022-02-09-13-22-09/: gps.npz  heading.npz  heading.txt  imu.npz  mag_flag.npz
py/: chevre.py
py/camera/: calib_parameters.npz  main.py
py/guerledan_interval/: ctc_img.py
py/projection_surface/: projection.py  tst_proj.py
py/src/: camera_calibration.py  extract_rosbag.py  projection.py  thickset.py  traitment_camera.py
py/src/convertisseur_kat/: convertisseur.py
py/src/guerledan_interval/: ctc_img_kat.py  traitement_trapeze.py
src/ctrl/: CMakeLists.txt  package.xml
src/ctrl/src/: ctrl.cpp
src/extract_from_bag/: CMakeLists.txt  package.xml
src/extract_from_bag/src/: extract.cpp
src/hardware_link/: CMakeLists.txt
src/mark_wp/: CMakeLists.txt  package.xml
src/remote_control/src/: customMessage.cpp  fieldCtrl.cpp  robotControlLink.cpp
src/replay_traj/: CMakeLists.txt
src/replay_traj/src/: replay_traj.cpp
src/robot/: launcher_simu_bags.launch  launcher_simu_on_robot.launch  launcher_test.launch
src/robot_control_kat/: CMakeLists.txt  heading.txt  instructions_guerledan.txt  main.cpp  package.xml  robotcontrol.cpp  robotcontrol.h  settings.ini  thefile.txt
src/robot_control_kat/msg/: State.msg
src/simulation/: CMakeLists.txt
src/simulation/rviz/: simu.rviz
src/visualisation_zone/: CMakeLists.txt  main.cpp
src/viz_intervals/: CMakeLists.txt  package.xml
src/viz_intervals/src/: viz_intervals.cpp
src/wayfinder_ros/: package.xml
src/wayfinder_ros/src/: driver.cpp
visualisation_zone/: main.cpp
ws_motorboat/: ros_export_client.sh
ws_motorboat/src/hardware_link/: package.xml
ws_motorboat/src/hardware_link/src/: arduino.cpp  gnss_inertial.cpp
ws_motorboat/src/mark_wp/src/: dist.cpp
ws_motorboat/src/remote_control/: CMakeLists.txt  package.xml
ws_motorboat/src/remote_control/include/: protocol.h
ws_motorboat/src/replay_traj/: package.xml
ws_motorboat/src/robot/: CMakeLists.txt  launcher_auto.launch  launcher_replay.launch  launcher_simu.launch  package.xml
ws_motorboat/src/simulation/: package.xml
ws_motorboat/src/simulation/meshes/: boat.dae
ws_motorboat/src/simulation/src/: simulation.cpp
ws_motorboat/src/wayfinder_ros/: CMakeLists.txt
ws_motorboat/src/wayfinder_ros/include/: wayfinder.h
ws_motorboat/src/wayfinder_ros/src/: wayfinder.cpp
